--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.8.0"
   },
   "dependencies": {
+    "fabric": "^1.7.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "vexflow": "^1.2.83"
